--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "makobot_vision"]
 	path = makobot_vision
 	url = https://github.com/awilby/makobot_vision
+[submodule "viso2"]
+	path = viso2
+	url = https://github.com/srv/viso2
